--- a/style.css
+++ b/style.css
@@ -1,62 +1,63 @@
-body { margin: 0 auto; }
+body {
+  margin: 0 auto;
+}
 
 html {
-	text-align: center;
-	background: #e9e9e9;
-	box-shadow: inset 0 -20px 120px 10px rgba(0,0,0, 0.2);
-	height: 100%;
+  height: 100%;
+  background: #e9e9e9;
+  box-shadow: inset 0 -20px 120px 10px rgba(0,0,0, 0.2);
+  text-align: center;
 }
 
 @font-face {
-    font-family: "Nintendo";
-    src: url("nintendo.eot");
-    src: url("nintendo.eot?#iefix"), url("nintendo.ttf") format("truetype");
+  font-family: "Nintendo";
+  src: url("nintendo.eot");
+  src: url("nintendo.eot?#iefix"), url("nintendo.ttf") format("truetype");
 }
 
 #box-logo {
-	background-color: #fff;
-	border: #f2021a solid 25px;
-	border-radius: 130px 130px 130px 130px;
-	box-shadow: 
-		3px 3px 7px #333, 
-		5px 5px 7px #ccc inset, 
-		-3px -3px 7px #333, 
-		-5px -5px 7px #ccc inset;
-	width: 620px;
-	height: 50px;
-	padding: 50px;
-	position: relative;
-	margin: 200px auto;
+  position: relative;
+  width: 620px;
+  height: 50px;
+  margin: 200px auto;
+  padding: 50px;
+  border: #f2021a solid 25px;
+  border-radius: 130px 130px 130px 130px;
+  background-color: #fff;
+  box-shadow: 3px 3px 7px #333,
+  5px 5px 7px #ccc inset,
+  -3px -3px 7px #333,
+  -5px -5px 7px #ccc inset;
 }
 
 h1 {
-	color: #f2021a;
-	font-family: Nintendo, Verdana;
-	font-size: 115px;
-	margin: -35px auto;
+  margin: -35px auto;
+  font-family: Nintendo, Verdana;
+  font-size: 115px;
+  color: #f2021a;
 }
 
 #reg {
-	color: #f2021a;
-	font-family: Verdana;
-	font-weight: bolder;
-	font-size: 40px;
-	margin: -135px 0 0 600px;
+  margin: -135px 0 0 600px;
+  font-family: Verdana;
+  font-size: 40px;
+  font-weight: bolder;
+  color: #f2021a;
 }
 
 .author {
-	font-family: Arial;
-	text-align: left;
-	color: #777;
-	font-size: 1.2em;
-	line-height: 1.2em;
-	position: absolute;
-	bottom: 20px;
-	right: 20px;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  font-family: Arial;
+  font-size: 1.2em;
+  line-height: 1.2em;
+  color: #777;
+  text-align: left;
 }
 
 .author a {
-	font-size: .8em;
-	color: #2b2b2b;
-	font-weight: bolder;
+  font-size: 0.8em;
+  font-weight: bolder;
+  color: #2b2b2b;
 }
